--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <%- include ("../partials/header.ejs") %>
-</head>
+  <head>
+    <%- include ("../partials/header.ejs") %>
+  </head>
 
-<body>
-
-<%- include ("../partials/nav.ejs") %>
-
-<div class="container">
-<h2>Database Results</h2>
-
-<ul>
-    <% results.forEach(function(r) { %>
-        <li><%= r.id %> - <%= r.name %></li>
-    <% }); %>
-</ul>
-
-</div>
-
-</body>
+  <body>
+    <h1>Hola desde Heroku</h1>
+  </body>
 </html>
